--- a/boot-test/pom.xml
+++ b/boot-test/pom.xml
@@ -10,9 +10,10 @@
   <dependencies>
   	
   
+  
   <dependency>
   	<groupId>org.springframework.boot</groupId>
-  	<artifactId>spring-boot-starter-web</artifactId>
+  	<artifactId>spring-boot-starter</artifactId>
   </dependency>
   </dependencies>
 </project>
