--- a/boot-test/src/main/resources/application.properties
+++ b/boot-test/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 api.getMemberInfo.url="http://getMemberInfo this is properties"
 logging.level.std=debug
-spring.profiles.include=api
+#spring.profiles.include=api
 spring.mvc.log-request-details=true
 
+mem.requestMember=http://getMemberUrl
+mem.requestPointList=http://getPointList
 
